--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.22.6",
     "@google/generative-ai": "^0.22.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@smastrom/react-rating": "^1.5.0",
     "axios": "^1.7.9",
